--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ Frutas, todas excepto : aguacate; coco max: 50 gramos de pulpa a la semana, 2 li
 
 
 
-<h2>2. plato</h2>
+<h2>2. plato :</h2>
 200 gramos de carne
 pechuga pollo
 pechuga de pavo
@@ -42,7 +42,7 @@ max 100 gramos de legumbres ( frijol negro, garbansos, lentejas )
 
 3 aguacates a la semana
 
-plato de comida:
+dist.
 300 g 	42% vegetales - ensalada ( 30% cilantro, repollo, brocoli, pepino, apio, tomate (sin cascara) ) 1 cebolla y un ajo 1 vez a la semana
 200 g 	28% carne y huevo
 100 g 	14% semillas
@@ -67,7 +67,7 @@ de manera más óptima.
 
 
 
-<h2>3. especias</h2>
+<h2>3. especias : </h2>
 semillas
 girasol
 chia
