--- a/reloj.html
+++ b/reloj.html
@@ -3,7 +3,7 @@
         <meta http-equiv="Content-Type" content="text/html;charset=UTF-8">
         <title>Javascript UI clock</title>
         <style type="text/css">
-
+<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, user-scalable=1">
 body{
     /*
 margin: 246px 348px;
