--- a/reloj.html
+++ b/reloj.html
@@ -28,7 +28,7 @@ margin: 246px 348px;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: url(clo2.png);
+    background: url(https://raw.githubusercontent.com/halneuman/dieta/75f4aeebc8b18f209314039985d2cfc6ae3d9757/clo2.png);
     background-size: 86%;
     background-position: center;
     background-repeat: no-repeat;
